--- a/Controls/CookieBar/src/DotVVM.Contrib/Resources/CookieTexts.resx
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Resources/CookieTexts.resx
@@ -156,4 +156,22 @@
   <data name="AlwaysAllowed" xml:space="preserve">
     <value>Always allowed</value>
   </data>
+  <data name="RuleTitle_FacebookPixel" xml:space="preserve">
+    <value>Facebook Pixel</value>
+  </data>
+  <data name="RuleTitle_GoogleAds" xml:space="preserve">
+    <value>Google Ads</value>
+  </data>
+  <data name="RuleTitle_Smartlook" xml:space="preserve">
+    <value>Smartlook</value>
+  </data>
+  <data name="Rule_FacebookPixel" xml:space="preserve">
+    <value>We use these cookies to measure conversions from our advertisement and banners distributed via Facebook. This allows us to better target the ads and make them more relevant to you.</value>
+  </data>
+  <data name="Rule_GoogleAds" xml:space="preserve">
+    <value>We use these cookies to measure conversions from our advertisement and banners distributed via Google Ads. This allows us to better target the ads and make them more relevant to you.</value>
+  </data>
+  <data name="Rule_Smartlook" xml:space="preserve">
+    <value>We use these cookies to measure, collect, analyse and report how users interact with our sites to better understand their behavior. Thanks to this, we can improve the site and provide better experience. The analytics service is provided by Smartlook.</value>
+  </data>
 </root>
